--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  fade_out_particle: ^1.2.1
+  animated_path: ^0.0.2
+  animated_text_kit: ^4.2.2
+  simple_animations: ^5.0.0+3
+  lottie: ^2.3.0
+  confetti: ^0.7.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
