--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   json_annotation: ^4.8.0
   http: ^0.13.5
   get: ^4.6.5
+  supercharged: ^2.1.1
 
 dev_dependencies:
   flutter_test:
